kubernetes/integrity-checker.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  # TODO: 1. CHANGE THE NAME OF THE STATEFUL SET
  name: integrity-checker-stateful
  labels:
    # TODO: 2. CHANGE THE APP LABEL
    app: integrity-checker
spec:
  # TODO: 3. CHANGE THE NAME OF THE SERVICE
  serviceName: integrity-checker
  replicas: 1
  selector:
    matchLabels:
      # TODO: 4. CHANGE THE APP LABEL
      app: integrity-checker
  template:
    metadata:
      labels:
        # TODO: 5. CHANGE THE APP LABEL
        app: integrity-checker
    spec:
      containers:
      # TODO: 6. CHANGE THE NAME OF THE CONTAINER
      - name: integrity-checker
        # TODO: 7. CHANGE THE IMAGE NAME
        image: ghcr.io/swiss-ai-center/integrity-checker:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
