kubernetes/integrity-checker.service.yml
apiVersion: v1
kind: Service
metadata:
  name: integrity-checker-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9999
      targetPort: 80
      protocol: TCP
  selector:
    app: integrity-checker
